完成 archlinux 打包

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ SET(CMAKE_AUTORCC ON)
 SET(QT_USE_QTGUI TRUE)
 SET(QT_USE_QTXML TRUE)
 SET(CMAKE_CXX_STANDARD 11)
+SET(CMAKE_BINARY_DIR "/bin")
 #SET(CMAKE_CXX_FLAGS "-fPIC")
 SET(GRACEFUL_GREETER_DEBUG 0)
 SET(CMAKE_INCLUDE_DIRECTORIES_BEFORE ON)
