--- a/pkg/archlinux/PKGBUILD
+++ b/pkg/archlinux/PKGBUILD
@@ -14,18 +14,15 @@ source=("https://github.com/graceful-linux/graceful-greeter/archive/refs/tags/$p
 sha512sums=('27b3733a45b874a834acd2b6c3248bbb645baa4ee9483f7312069831873a95bbd8e6a23843c40cbb3d6cdc15393ce5cca8b3b477ea868fb9bcc42f87bf697a53')
 
 prepare() {
-  cd $pkgname-$pkgver && mkdir build && cd build 
+#mv $pkgver "graceful-greeter-$pkgver"
+  cd graceful-greeter-$pkgver && mkdir build && cd build 
+  cmake ..
 }
 
 build() {
-  cd $pkgname-$pkgver/build
+  cd graceful-greeter-$pkgver/build
   make
 }
-
-#check() {
-#  cd udisks-udisks-$pkgver
-#  make check
-#}
 
 package() {
   cd $pkgname-$pkgver/build
